--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,27 +1,27 @@
 name: firebase_admin_sdk
 description: A port of the Firebase admin sdk to pure, idiomatic Dart code
-version: 0.0.2
+version: 0.0.3
 homepage: https://github.com/OttomanDeveloper/firebase_admin_sdk
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.12.0 <4.0.0"
 
 dependencies:
   clock: ^1.1.1
-  collection: ^1.16.0
-  crypto_keys: ^0.3.0
+  collection: ^1.17.2
+  crypto_keys: ^0.3.0+1
   dotenv: ^3.0.0
-  firebase_dart: ^1.0.9
-  gcloud: ^0.8.5
-  http: ^0.13.4
-  jose: ^0.3.2
-  meta: ^1.8.0
-  openid_client: ^0.4.6
-  path: ^1.8.2
-  x509: ^0.2.2
+  firebase_dart: ^1.0.11
+  gcloud: ^0.8.9
+  http: ^0.13.6
+  jose: ^0.3.3
+  meta: ^1.9.1
+  openid_client: ^0.4.7
+  path: ^1.8.3
+  x509: ^0.2.3
 
 dev_dependencies:
   fake_async: ^1.3.1
-  mockito: ^5.2.0
-  lints: ^2.0.0
-  test: ^1.21.3
+  lints: ^2.1.1
+  mockito: ^5.4.2
+  test: ^1.24.4
