--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,17 +4,17 @@ version: 0.0.4
 homepage: https://github.com/OttomanDeveloper/firebase_admin_sdk
 
 environment:
-  sdk: ">=2.12.0 <4.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   clock: ^1.1.1
-  collection: ^1.17.0
+  collection: ^1.18.0
   crypto_keys: ^0.3.0+1
   dotenv: ^3.0.0
   firebase_dart: ^1.0.11
-  gcloud: ^0.8.9
+  gcloud: ^0.8.11
   http: ^0.13.6
-  jose: ^0.3.3
+  jose: ^0.3.4
   meta: ^1.9.1
   openid_client: ^0.4.7
   path: ^1.8.3
@@ -22,6 +22,6 @@ dependencies:
 
 dev_dependencies:
   fake_async: ^1.3.1
-  lints: ^2.1.1
+  flutter_lints: ^2.0.2
   mockito: ^5.4.2
-  test: ^1.24.4
+  test: ^1.24.6
